# kinematics_calibration

./: .gitignore  CMakeLists.txt  README.md  output_plot.m
data/: test_suite2.m
data/CLOSED_CALIBRATION/: 2_10.000000_iteration_info.txt  2_100.000000_iteration_info.txt  2_100.000000_offset_data.txt  2_20.000000_iteration_info.txt  2_20.000000_offset_data.txt  2_40.000000_offset_data.txt  2_5.000000_iteration_info.txt  2_5.000000_offset_data.txt  2_50.000000_iteration_info.txt  2_50.000000_offset_data.txt  2_iteration_info.txt  2_offset_data.txt
data/CLOSED_CALIBRATION/back_up/: 0.01_1107_2_iteration_info.txt  1105_1_calib_output_LM.txt  1105_1_iteration_info_LM.txt  1105_iteration_info.txt  1106_2_iteration_info.txt  1107_2_offset_data.txt  (+1 more)
data/KETI/: panda_left.txt  panda_left_no_q.csv  panda_right_no_q.csv  panda_top_no_q.csv
data/SNU/: calib_pos.csv
data/old/: 1_iteration_info_SVD.txt  2_iteration_info_SVD.txt
data/output_left/: q_data_1.txt  q_data_2.txt  x_out_2.txt
data/panda_right/: test_suite1.m
data/triple_calibration/: 11_iteration_info.txt  11_offset_data.txt  1_iteration_info.txt  1_offset_data.txt  2_offset_data.txt
data/x_-0.55_y_0_1_case_1/: panda_left_x_out_1.txt
data/x_-0.55_y_0_1_case_2/: panda_left_x_out.txt
include/: suhan_benchmark.h  triple_calibration.h
include/robot_model/: franka_panda_model.h  robot_model.h
scripts/: make_test_data.py  rearrange_data.py
src/: data_collector.cpp  hc_closed_chain.cpp  main.cpp  main2.cpp  main_KETI.cpp  main_closed_chain.cpp  test.txt  triple_calibration.cpp
src/backup/: 20200921_fpm_backup.cpp  hc_test copy.cpp  hc_test.cpp  hc_test.h  kimhc_action_work.cpp  main2_3DH_version.cpp  main2_4DH_version.cpp  working1.cpp  working2.cpp  working_model_update.cpp
src/robot_model/: franka_panda_model.cpp
(+35 files in other folders)
